<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/plnButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:src="@drawable/ic_pln"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/pln"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/pulsaButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:src="@drawable/ic_pulsa" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/pulsa"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/tvButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:src="@drawable/ic_tv_kabel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/tv_kabel"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/pulsaPSCButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_pulsa_pascbayar" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/pulsa_pascabayar"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/goPayButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_gopay" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/go_pay"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/grabButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_grab" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/grab"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ovoButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_grab" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/ovo"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/danaButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_dana" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/dana"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/eMoneyMandiriButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_emoney" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/e_money_mandiri"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/tabCashBNIButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_tap_cash" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/tab_cash_bni"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/financeButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_finance" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/credit"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/moreButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_default"
                    android:contentDescription="@string/button_image_product"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_more" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>